--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "test": "echo test",
     "build": "tsc && vite build",
     "preview": "vite preview"
   },
