--- a/package.json
+++ b/package.json
@@ -18,12 +18,16 @@
     "dexie": "^3.2.3",
     "dexie-react-hooks": "^1.1.3",
     "inversify": "^6.0.1",
+    "localforage": "^1.10.0",
+    "match-sorter": "^6.3.1",
     "notistack": "^3.0.1",
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-router-dom": "^6.10.0",
     "react-sortablejs": "^6.1.4",
     "reflect-metadata": "^0.1.13",
+    "sort-by": "^1.2.0",
     "sortablejs": "^1.15.0"
   },
   "devDependencies": {
