--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.0",
@@ -24,6 +25,7 @@
     "react": "^18.2.0",
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.3",
     "react-router-dom": "^6.10.0",
     "react-sortablejs": "^6.1.4",
     "reflect-metadata": "^0.1.13",
