--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@emotion/react": "^11.10.6",
     "@emotion/styled": "^11.10.6",
+    "@hookform/resolvers": "^3.0.0",
     "@mui/icons-material": "^5.11.11",
     "@mui/material": "^5.11.15",
     "class-transformer": "^0.5.1",
@@ -26,11 +27,13 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.3",
+    "react-hook-form": "^7.43.9",
     "react-router-dom": "^6.10.0",
     "react-sortablejs": "^6.1.4",
     "reflect-metadata": "^0.1.13",
     "sort-by": "^1.2.0",
-    "sortablejs": "^1.15.0"
+    "sortablejs": "^1.15.0",
+    "zod": "^3.21.4"
   },
   "devDependencies": {
     "@types/react": "^18.0.28",
